# CImg-hello-world

./: CMakeLists.txt  README.md  main.cpp
